Added email signup.

--- a/assets/pictonic/pictonic.html
+++ b/assets/pictonic/pictonic.html
@@ -28,6 +28,7 @@
         <div class="reference">
           <h3>Icon Reference</h3>
           <div class="icons clear">
+            <div class="ref"><span class="icon-mail-mail01"></span>.icon-mail-mail01</div>
             <div class="ref"><span class="icon-os-ios"></span>.icon-os-ios</div>
             <div class="ref"><span class="icon-os-win-04"></span>.icon-os-win-04</div>
             <div class="ref"><span class="icon-os-linux_1_"></span>.icon-os-linux_1_</div>
