--- a/index.html
+++ b/index.html
@@ -250,6 +250,29 @@
 	<!-- End FeaturedSection -->
 	</div>
 </div>
+<div class="row-fluid">
+	<!-- Start FeaturedSection -->
+	<div class="span10 offset1">
+		<div class="span6">
+			<a id="aboutus"><h1>What is LibreTees?</h1></a>
+			<h2>we promote freedom</h2>
+		</div>
+		<div class="span6">
+			<h4>We'll let you know when something big happens!</h4>
+			<h5>No spam, no promotional offers, and your address is safe with us.</h5>
+			<form class="form-inline">
+				<fieldset>
+					<div class="control-group input-controls">
+						<div class="input-prepend">
+							<label class="btn control-label" for="email">Sign up!&nbsp<span class="icon-mail-mail01"></span></label>
+							<input class="input-medium" id="email" type="text" placeholder="you@libretees.com">
+						</div>
+					</div>
+				</fieldset>
+			</form>
+		</div>
+	</div>
+</div>
 <!-- Start BelowFeature -->
 <!-- End WhatWeDo Pill -->
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
