--- a/index.html
+++ b/index.html
@@ -12,19 +12,10 @@
 <title>LibreTees | A Different Kind of Free</title>
 <!-- Bootstrap -->
 <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<style>
-body {
-	padding-top: 60px;
-	padding-bottom: 40px;
-}
-
-#optionsListContainer {
-	display: none;
-}
-</style>
 <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
 <link href="assets/bootstrap/css/main.css" rel="stylesheet" />
 <script src="assets/bootstrap/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
+<link href="assets/libretees/css/main.css" rel="stylesheet" />
 <!-- Pictonic -->
 <link href="assets/pictonic/css/pictonic.css" rel="stylesheet" />
 <!--[if lt IE 8]>
@@ -35,15 +26,21 @@ body {
 <nav class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
 		<div class="container">
-			<button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
-			<span class="icon-bar"></span><span class="icon-bar"></span>
-			<span class="icon-bar"></span></button><a class="brand" href="#">LibreTees</a>
-			<div class="nav-collapse collapse">
-				<ul class="nav nav-pills pull-right">
-					<li class="active"><a href="#">What We Do</a></li>
-					<li><a href="#">About Us</a></li>
-					<li><a href="#">Login</a></li>
+			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</a>
+			<a class="brand" href="#">LibreTees</a>
+			<div class="nav-collapse collapse pull-right" style="height: 0px;">
+				<ul class="nav">
+					<li><a href="">About Us</a></li>
+					<li><a href="">Discover</a></li>
 				</ul>
+				<ul class="nav actions">
+					<li><a href="">Log In</a></li>
+					<li><a href="">Sign Up</a></li>
+				</ul> 
 			</div>
 		</div>
 	</div>
@@ -59,8 +56,15 @@ body {
 				<!-- Start of FeaturedContent                 -->
 				<!-- ---------------------------------------- -->
 				<div class="row-fluid">
-					<div class="span12">
-						<img alt="" class="img-rounded thumbnail" src="http://placehold.it/675x380">
+					<div id="feature-video" class="span12">
+						<img alt="" style="width: 100%; height: 380px;">
+						<div id="text-overlay">
+							<p>
+								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+								Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum 
+								at, laoreet mattis, massa. Sed eleifend nonummy diam.
+							</p>
+						</div>
 					</div>
 				</div>
 				<!-- ---------------------------------------- -->
@@ -100,57 +104,37 @@ body {
 			<!-- Start FeaturedSection RightSide -->
 			<div class="span4">
 				<!-- ---------------------------------------- -->
-				<!-- Start of Quotation                       -->
-				<!-- ---------------------------------------- -->
-				<div class="row-fluid">
-					<div class="span12">
-						<blockquote>
-							<p><span class="icon-quote"></span>Open source brings 
-							opportunity.</p>
-							<p><small>Someone famous</small> </p>
-						</blockquote>
-					</div>
-				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Quotation                         -->
-				<!-- ---------------------------------------- -->
-				<!-- ---------------------------------------- -->
-				<!-- Start of Transcript                      -->
-				<!-- ---------------------------------------- -->
-				<div class="row-fluid">
-					<div class="span12">
-						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-						Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum 
-						at, laoreet mattis, massa. Sed eleifend nonummy diam. Praesent 
-						mauris ante, elementum et, bibendum at, posuere sit amet, nibh. 
-						Duis tincidunt lectus quis dui viverra vestibulum. Suspendisse 
-						vulputate aliquam dui. Nulla elementum dui ut augue. Aliquam 
-						vehicula mi at mauris. Maecenas placerat, nisl at consequat 
-						rhoncus, sem nunc gravida justo, quis eleifend arcu velit quis 
-						lacus. Morbi magna magna, tincidunt a, mattis non, imperdiet 
-						vitae, tellus. Sed odio est, auctor ac, sollicitudin in, 
-					</div>
-				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Transcript                        -->
-				<!-- ---------------------------------------- -->
-				<!-- ---------------------------------------- -->
 				<!-- Start of Options                         -->
 				<!-- ---------------------------------------- -->
 				<div class="row-fluid">
-					<div id="userOptions" class="span12 btn-toolbar">
-						<span class="btn-group">
-							<button class="btn userOptionButton" type="button" title="Say Thank You"><i class="icon-thumbs-up"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-facebook"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-twitter-3"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-google__x2B_"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-reddit"></i></button>
-						</span>
-						<span class="btn-group">
-							<button class="btn userOptionButton" type="button"><i class="icon-coffee2"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-cash-usd"></i></button>
-							<button class="btn userOptionButton" type="button"><i class="icon-tee"></i></button>
-						</span>
+					<div>
+						<blockquote>
+							<p>Open source brings opportunity.<p/>
+							<p><small>Someone Famous</small> </p>
+						</blockquote>
+					</div>
+					<div id="userOptions" class="span12 icons">
+						<div class="ref">
+							<span id="facebook" class="icon-facebook"></span>
+						</div>
+						<div class="ref">
+							<span id="twitter" class="icon-twitter-3"></span>
+						</div>
+						<div class="ref">
+							<span id="google" class="icon-google__x2B_"></span>
+						</div>
+						<div class="ref">
+							<span id="reddit" class="icon-reddit"></span>
+						</div>
+						<div class="ref">
+							<span id="coffee" class="icon-coffee2"></span>
+						</div>
+						<div class="ref">
+							<span id="cash" class="icon-cash-usd"></span>
+						</div>
+						<div class="ref">
+							<span id="tee" class="icon-tee" style="color: blue"><span>
+						</div>
 					</div>
 				</div>
 				<!-- ---------------------------------------- -->
@@ -283,106 +267,12 @@ body {
 $(function() {
 	var numSelected = 0;
 
-	var html = '<div id="optionsListContainer" class="row-fluid">\
-				<div class="span12 alert alert-info">\
-				<ul id="optionsList" class="unstyled">\
-				</ul>\
-				</div>\
-				</div>';
-
-	$(html).appendTo('#contributeButtonContainer');
-
-	$('#userOptions').hover(
+	$('#facebook, #twitter, #google, #reddit, #coffe, #cash, #tee').click(
 		function() {
-			$('#optionsListContainer').show();
+			$(this).show();
 		},
 		function() {
 			$('#optionsListContainer').hide();
-		}
-	);
-
-	var onUserOptionButtonClick = function(event) {
-		console.log(event.type);
-
-			$(this)
-				.switchClass('btn-info', 'btn-warning', 400, 'easeInBounce', function() {
-					$(this).switchClass('btn-warning', 'btn-info');
-				})
-				.unbind('click')
-				.click(function() {
-					$(this)
-						.removeClass('btn-info')
-						.unbind('click')
-						.bind('click', onUserOptionButtonClick)
-						.bind('mouseleave', function() {
-							$(this).removeClass('btn-info');
-						});
-
-					return false;
-				})
-				.unbind('mouseleave');
-	};
-
-	$('.userOptionButton').click(onUserOptionButtonClick);
-
-	$('.userOptionButton').hover(
-		function (event) {
-			console.log(event.type);
-			if (!$(this).hasClass('btn-info') && !$(this).hasClass('btn-success')) {
-				$(this).addClass('btn-info');
-			}
-		},
-		function (event) {
-			console.log(event.type);
-			if ($(this).hasClass('btn-info') && !$(this).hasClass('btn-success')) {
-				$(this).removeClass('btn-info');
-			}
-		}
-	);
-
-	$('.userOptionButton').hover(
-		function() {
-			var $out = $('i[class^="icon-"]',this).attr('class');
-			var html = '<li><span class="badge badge-warning">'
-			html += "<i class=" + $out + "></i></span>";
-			var innerHTML = '';
-
-
-			switch($out) {
-			case 'icon-thumbs-up':
-				innerHTML = 'send a thankyou';
-				break;
-			case 'icon-facebook':
-				innerHTML = 'like on facebook';
-				break;
-			case 'icon-twitter-3':
-				innerHTML = 'tweet on twitter';
-				break;
-			case 'icon-google__x2B_':
-				innerHTML = '+1 on google plus';
-				break;
-			case 'icon-reddit':
-				innerHTML = 'upvote on reddit';
-				break;
-			case 'icon-coffee2':
-				innerHTML = 'buy a coffee - contribute $1';
-				break;
-			case 'icon-cash-usd':
-				innerHTML = 'contribute $5';
-				break;
-			case 'icon-tee':
-				innerHTML = 'buy a t-shirt for yourself - contribute $1';
-				break;
-			default:
-
-			}
-			html += '<span class="label">' + innerHTML + ' </span>';
-			html += '</li>';
-			console.log($out, innerHTML, html);
-			$('#optionsList').append(html);
-		},
-		function() {
-
 		}
 	);
 });
