--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
 				<span class="icon-bar"></span>
 			</a>
 			<a class="brand" href="#">LibreTees</a>
-			<div class="nav-collapse collapse pull-right" style="height: 0px;">
-				<ul class="nav">
+			<div class="nav-collapse collapse" style="height: 0px;">
+				<ul class="nav pull-left">
 					<li><a href="">About Us</a></li>
-					<li><a href="">Discover</a></li>
 				</ul>
-				<ul class="nav actions">
-					<li><a href="">Log In</a></li>
-					<li><a href="">Sign Up</a></li>
+				<ul class="nav actions pull-right">
+					<li><a href="">Log In or Sign Up</a></li>
 				</ul> 
 			</div>
 		</div>
