--- a/index.html
+++ b/index.html
@@ -5,155 +5,187 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 
 <head>
-<meta charset="utf-8">
-<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-<meta content="" name="description">
-<meta content="width=device-width" name="viewport">
-<title>LibreTees | A Different Kind of Free</title>
-<!-- Bootstrap -->
-<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-<link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
-<link href="assets/bootstrap/css/main.css" rel="stylesheet" />
-<script src="assets/bootstrap/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
-<link href="assets/libretees/css/main.css" rel="stylesheet" />
-<!-- Pictonic -->
-<link href="assets/pictonic/css/pictonic.css" rel="stylesheet" />
-<!--[if lt IE 8]>
-<script src="assets/pictonic/js/pictonic.min.js" type="text/javascript"></script>
-<![endif]-->
+	<meta charset="utf-8">
+	<meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+	<meta content="" name="description">
+	<meta content="width=device-width" name="viewport">
+
+	<title>LibreTees | A Different Kind of Free</title>
+
+	<!-- Bootstrap -->
+	<link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+	<link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet" />
+	<link href="assets/bootstrap/css/main.css" rel="stylesheet" />
+	<script src="assets/bootstrap/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js" type="text/javascript"></script>
+	<link href="assets/libretees/css/main.css" rel="stylesheet" />
+
+	<!-- Pictonic -->
+	<link href="assets/pictonic/css/pictonic.css" rel="stylesheet" />
+	<!--[if lt IE 8]>
+		<script src="assets/pictonic/js/pictonic.min.js" type="text/javascript"></script>
+	<![endif]-->
 </head>
+
 <body>
+
+<!-- ---------------------------------------- -->
+<!-- Start NavBar                             -->
+<!-- ---------------------------------------- -->
 <nav class="navbar navbar-fixed-top">
 	<div class="navbar-inner">
-		<div class="container">
+		<div class="container-fluid">
 			<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</a>
 			<a class="brand" href="#">LibreTees</a>
-			<div class="nav-collapse collapse" style="height: 0px;">
-				<ul class="nav pull-left">
+			<div class="nav-collapse">
+				<ul class="nav nav-pills pull-left">
+					<li class="active"><a href="">What We Do</a></li>
 					<li><a href="">About Us</a></li>
 				</ul>
-				<ul class="nav actions pull-right">
-					<li><a href="">Log In or Sign Up</a></li>
-				</ul> 
-			</div>
+				<ul class="nav pull-right">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icons icon-user-favourite"></span></a>
+						<ul class="dropdown-menu">
+							<li>
+								<span><p>LoginForm</p></span>
+							</li>
+						</ul>
+					</li>
+				</ul>
+			</div> <!-- /.nav-collapse -->
 		</div>
 	</div>
 </nav>
+<!-- ---------------------------------------- -->
+<!-- End NavBar                               -->
+<!-- ---------------------------------------- -->
+
+<!-- ---------------------------------------- -->
+<!-- Start WhatWeDoPill                       -->
+<!-- ---------------------------------------- -->
 <div class="container-fluid">
-	<!-- Start WhatWeDo Pill -->
 	<div class="row-fluid">
 		<!-- Start FeaturedSection -->
 		<div class="span10 offset1">
-			<!-- Start FeaturedSection LeftSide -->
+			<!-- Start FeaturedSectionLeft -->
 			<div class="span8">
-				<!-- ---------------------------------------- -->
-				<!-- Start of FeaturedContent                 -->
-				<!-- ---------------------------------------- -->
+
+				<!-- Start VideoPlayer -->
 				<div class="row-fluid">
-					<div id="feature-video" class="span12">
-						<img alt="" style="width: 100%; height: 380px;">
-						<div id="text-overlay">
-							<p>
-								Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
-								Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum 
-								at, laoreet mattis, massa. Sed eleifend nonummy diam.
-							</p>
-						</div>
+					<div id="feature-video" class="span12 thumbnail">
+						<img src="http://placehold.it/675x380">
 					</div>
 				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of FeaturedContent                   -->
-				<!-- ---------------------------------------- -->
-				<!-- ---------------------------------------- -->
-				<!-- Start BelowFeature                       -->
-				<!-- ---------------------------------------- -->
+				<!-- End VideoPlayer -->
+
+				<!-- Start ProjectInfo -->
 				<div class="row-fluid">
 					<div class="span12 tabbable">
 						<ul class="nav nav-pills">
-							<li class="active"><a data-toggle="tab" href="#pane1">Feature</a></li>
+							<li class="active"><a data-toggle="tab" href="#pane1">Story</a></li>
 							<li><a data-toggle="tab" href="#pane2">tech@tyler</a></li>
-							<li><a data-toggle="tab" href="#pane2">Knoppix</a></li>
-							<li><a data-toggle="tab" href="#pane3">iTALC</a></li>
-							<li><a data-toggle="tab" href="#pane4">MineTest</a></li>
-							<li><a data-toggle="tab" href="#pane4">What You Can Do</a></li>
+							<li><a data-toggle="tab" href="#pane3">Knoppix</a></li>
+							<li><a data-toggle="tab" href="#pane4">iTALC</a></li>
+							<li><a data-toggle="tab" href="#pane5">MineTest</a></li>
+							<li><a data-toggle="tab" href="#pane6">What You Can Do</a></li>
 						</ul>
 						<div class="tab-content">
 							<div id="pane1" class="tab-pane active">
 								<h4>Bringing Tech to DC Public Schools</h4>
-								<pre>Code here ...</pre>
 							</div>
 							<div id="pane2" class="tab-pane">
-								<p>Knoppix is...</p>
+								<h4>Tyler Elementary School</h4>
 							</div>
 							<div id="pane3" class="tab-pane">
-								<h4>iTALC is...</h4>
+								<h4>Knoppix Linux</h4>
 							</div>
 							<div id="pane4" class="tab-pane">
-								<h4>MineTest is...</h4>
+								<h4>iTALC</h4>
 							</div>
-						</div>
-						<!-- /.tab-content --></div>
-					<!-- /.tabbable --></div>
-				<!-- End FeaturedSection LeftSide --></div>
-			<!-- Start FeaturedSection RightSide -->
-			<div class="span4">
-				<!-- ---------------------------------------- -->
-				<!-- Start of Options                         -->
-				<!-- ---------------------------------------- -->
-				<div class="row-fluid">
-					<div>
-						<blockquote>
-							<p>Open source brings opportunity.<p/>
-							<p><small>Someone Famous</small> </p>
-						</blockquote>
-					</div>
-					<div id="userOptions" class="span12 icons">
-						<div class="ref">
-							<span id="facebook" class="icon-facebook"></span>
-						</div>
-						<div class="ref">
-							<span id="twitter" class="icon-twitter-3"></span>
-						</div>
-						<div class="ref">
-							<span id="google" class="icon-google__x2B_"></span>
-						</div>
-						<div class="ref">
-							<span id="reddit" class="icon-reddit"></span>
-						</div>
-						<div class="ref">
-							<span id="coffee" class="icon-coffee2"></span>
-						</div>
-						<div class="ref">
-							<span id="cash" class="icon-cash-usd"></span>
-						</div>
-						<div class="ref">
-							<span id="tee" class="icon-tee" style="color: blue"><span>
+							<div id="pane5" class="tab-pane">
+								<h4>MineTest</h4>
+							</div>
+							<div id="pane6" class="tab-pane">
+								<h4>Contribute</h4>
+							</div>
 						</div>
 					</div>
 				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Options                           -->
-				<!-- ---------------------------------------- -->
-				<!-- ---------------------------------------- -->
-				<!-- Start of Contribute                        -->
-				<!-- ---------------------------------------- -->
-				<div id="contributeButtonContainer" class="row-fluid">
+				<!-- End ProjectInfo   -->
+
+			</div>
+			<!-- End FeaturedSectionLeft   -->
+
+			<!-- Start FeaturedSectionRight -->
+			<div class="span4">
+
+				<!-- Start Quote -->
+				<div class="row-fluid">
+					<div>
+						<blockquote>
+							<p><i class="icon-quote muted"></i>Open source brings opportunity.</p>
+							<p><small>Someone Famous</small> </p>
+						</blockquote>
+					</div>
+				</div>
+				<!-- End Quote   -->
+
+				<!-- Start Story -->
+				<div class="row-fluid">
+					<div class="span12">
+						<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+						Nam cursus. Morbi ut mi. Nullam enim leo, egestas id, condimentum 
+						 at, laoreet mattis, massa. Sed eleifend nonummy diam.</p>
+					</div>
+				</div>
+				<!-- End Story   -->
+
+				<!-- Start ContributeOptionsBar -->
+				<div class="row-fluid">
+					<div id="userOptions" class="span12 btn-toolbar icons">
+						<span class="btn-group">
+							<button class="btn" type="button">
+								<i id="facebook" class="icon-facebook"></i>
+							</button>
+							<button class="btn" type="button">
+								<i id="twitter" class="icon-twitter-3"></i>
+							</button>
+							<button class="btn" type="button">
+								<i id="google" class="icon-google__x2B_"></i>
+							</button>
+							<button class="btn" type="button">
+								<i id="reddit" class="icon-reddit"></i>
+							</button>
+						</span>
+						<span class="btn-group">
+							<button class="btn" type="button">
+								<i class="icon-coffee2"></i>
+							</button>
+							<button class="btn" type="button">
+								<i class="icon-cash-usd"></i>
+							</button>
+							<button class="btn" type="button">
+								<i class="icon-tee"></i>
+							</button>
+						</span>
+					</div>
+				</div>
+				<!-- End ContributeOptionsBar   -->
+
+				<!-- Start ContributeButton -->
+				<div id="contributeRow" class="row-fluid">
 					<div class="span12">
 						<button id="contributeButton" class="btn btn-block btn-large btn-primary" href="#">Contribute 
 							<span class="icon-star"></span>
 						</button>
 					</div>
 				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Contribute                        -->
-				<!-- ---------------------------------------- -->
-				<!-- ---------------------------------------- -->
-				<!-- Start of Contributors                    -->
-				<!-- ---------------------------------------- -->
+				<!-- End ContributeButton   -->
+
+				<!-- Start ContributorList -->
 				<div class="row-fluid">
 					<div class="span12">
 						<table class="table table-condensed table-striped">
@@ -211,13 +243,23 @@
 						</table>
 					</div>
 				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Actions                           -->
-				<!-- ---------------------------------------- -->
-				<!-- End FeaturedSection RightSide --></div>
-			<!-- End FeaturedSection --></div>
+				<!-- End ContributorList   -->
+
+			</div>
+			<!-- End FeaturedSectionRight   -->
+
+		</div>
+		<!-- End FeaturedSection   -->
+
 	</div>
 </div>
+<!-- ---------------------------------------- -->
+<!-- End WhatWeDoPill                         -->
+<!-- ---------------------------------------- -->
+
+<!-- ---------------------------------------- -->
+<!-- Start AboutUsPill                        -->
+<!-- ---------------------------------------- -->
 <div class="row-fluid">
 	<!-- Start FeaturedSection -->
 	<div class="span10 offset1">
@@ -250,99 +292,16 @@
 		</div>
 	</div>
 </div>
-<!-- Start BelowFeature -->
-<!-- End WhatWeDo Pill -->
+<!-- ---------------------------------------- -->
+<!-- End AboutUsPill                          -->
+<!-- ---------------------------------------- -->
+
 <link rel="stylesheet" href="assets/jquery-ui-1.10.0/themes/base/jquery-ui.css" />
 <script src="assets/jquery-ui-1.10.0/jquery-1.9.0.js"></script>
 <script src="assets/jquery-ui-1.10.0/ui/jquery-ui.js"></script>
-
-
 <script src="assets/bootstrap/js/vendor/bootstrap.min.js" type="text/javascript"></script>
 <script src="assets/bootstrap/js/main.js" type="text/javascript"></script>
 <script src="assets/libretees/js/ui.js" type="text/javascript"></script>
-<script>
 
-$(function() {
-	var numSelected = 0;
-
-	$('#facebook, #twitter, #google, #reddit, #coffe, #cash, #tee').click(
-		function() {
-			$(this).show();
-		},
-		function() {
-			$('#optionsListContainer').hide();
-		}
-	);
-});
-
-
-/*			<!-- ---------------------------------------- -->
-				<!-- Start of Actions                         -->
-				<!-- ---------------------------------------- -->
-				<div class="row-fluid">
-					<div class="span12 alert alert-info">
-						<ul class="actions unstyled">
-							<li><span class="badge badge-warning">
-								<i class="icon-facebook"></i></span>
-								<span class="label">Like on Facebook</span>
-							</li>
-							<li><span class="badge badge-warning">
-								<i class="icon-twitter-3"></i></span>
-								<span class="label">Tweet on Twitter</span>
-							</li>
-							<li><span class="badge badge-warning">
-								<i class="icon-google__x2B_"></i></span>
-								<span class="label">+1 on Google Plus</span>
-							</li>
-							<li>
-								<span class="badge badge-warning">
-									<i class="icon-coffee2"></i>
-								</span>
-								<span class="label">Contribute $1</span>
-							</li>
-							<li>
-								<span class="badge badge-warning">
-									<i class="icon-cash-usd"></i>
-								</span>
-								<span class="label">Contribute $5</span>
-							</li>
-							<li>
-								<span class="badge badge-warning">
-									<i class="icon-tee"></i>
-								</span>
-								<span class="label">Buy a T-Shirt</span>
-							</li>
-						</ul>
-					</div>
-				</div>
-				<!-- ---------------------------------------- -->
-				<!-- End of Actions                           -->
-				<!-- ---------------------------------------- -->
-*/
-
-if (jQuery.ui) {
-  //alert("jQuery UI Loaded.");
-}
-
-
-
-
-  $(function() {
-    $( document ).tooltip({
-      position: {
-        my: "center bottom-20",
-        at: "center top",
-        using: function( position, feedback ) {
-          $( this ).css( position );
-          $( "<div>" )
-            .addClass( "arrow" )
-            .addClass( feedback.vertical )
-            .addClass( feedback.horizontal )
-            .appendTo( this );
-        }
-      }
-    });
-  });
-</script>
 </body>
 </html>
